src/styles/style.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import "./theme.css";
@import "./custom.css";

@font-face {
  font-family: "BushcraftTextured";
  src:
    url("../assets/fonts/Bushcraft-textured.woff2") format("woff2"),
    url("../assets/fonts/Bushcraft-textured.woff") format("woff");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@layer utilities {
  /* Hide scrollbar for Chrome, Safari, and Opera */
  .scrollbar-hide::-webkit-scrollbar {
    display: none;
  }

  /* Hide scrollbar for IE, Edge, and Firefox */
  .scrollbar-hide {
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */
  }
}

body {
  @apply font-body;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
label {
  cursor: default;
}

